--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dj-database-url = "^2.1.0"
 django-bootstrap5 = "^23.3"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.2.0"}
 pillow = "^10.1.0"
+celery = "^5.3.4"
+redis = "^5.0.1"
 
 
 [build-system]
