--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.2.0"}
 pillow = "^10.1.0"
 celery = "^5.3.4"
 redis = "^5.0.1"
+vk-api = "^11.9.9"
 
 
 [build-system]
