--- a/.github/workflows/tests&style.yml
+++ b/.github/workflows/tests&style.yml
@@ -37,16 +37,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Create virtual environment
         run: python -m venv venv
-      - name: Activate virtual environment
-        run: |
-          . venv/bin/activate
       - name: Install dependencies
         run: |
           pip install --upgrade pip
           pip install -r req/dev.txt
       - name: Apply migrations
         run: |
-          . python manage.py migrate
+          . venv/bin/activate && python manage.py migrate
       - name: Run linter
         run: flake8 --exclude=static,*migrations,venv,config
       - name: Test & publish code coverage
