--- a/.github/workflows/tests&style.yml
+++ b/.github/workflows/tests&style.yml
@@ -43,7 +43,7 @@ jobs:
           pip install -r req/dev.txt
       - name: Apply migrations
         run: |
-          . venv/bin/activate && python manage.py migrate
+          venv/bin/python manage.py migrate
       - name: Run linter
         run: flake8 --exclude=static,*migrations,venv,config
       - name: Test & publish code coverage
