--- a/.github/workflows/tests&style.yml
+++ b/.github/workflows/tests&style.yml
@@ -35,15 +35,13 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Create virtual environment
-        run: python -m venv venv
-      - name: Install dependencies
+      - name: Install dependencies and apply migrations
         run: |
+          python -m venv venv
+          . venv/bin/activate
           pip install --upgrade pip
           pip install -r req/dev.txt
-      - name: Apply migrations
-        run: |
-          venv/bin/python manage.py migrate
+          python manage.py migrate
       - name: Run linter
         run: flake8 --exclude=static,*migrations,venv,config
       - name: Test & publish code coverage
