--- a/.github/workflows/tests&style.yml
+++ b/.github/workflows/tests&style.yml
@@ -50,6 +50,6 @@ jobs:
         uses: paambaati/codeclimate-action@v3.2.0
         with:
           coverageCommand: |
-            . venv/bin/activate
+            . venv/bin/activate &&
             coverage run manage.py test
           debug: true
