--- a/.github/workflows/tests&style.yml
+++ b/.github/workflows/tests&style.yml
@@ -51,5 +51,8 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
-          coverageCommand: coverage run manage.py test
+          coverageCommand: |
+            coverage run manage.py test && \
+            coverage report -m --include=btr/* --omit=btr/config/settings.py && \
+            coverage xml --include=btr/* --omit=btr/config/settings.py
           debug: true
