--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       <<: *environment-defaults
     volumes:
       - static_volume:/app/static
+      - media_volume:/app/media
     networks:
       - btr-network
     restart: on-failure:5
@@ -62,15 +63,32 @@ services:
   nginx:
     image: nginx:latest
     container_name: nginx
+    restart: always
+    working_dir: /app
+    command: /bin/sh -c "chmod -R 755 /var/www/certbot && nginx -g 'daemon off;'"
     volumes:
       - ./config/nginx.conf:/etc/nginx/nginx.conf
       - static_volume:/static
+      - media_volume:/media
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - btr-rental
     networks:
       - btr-network
+  
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt:rw
+      - ./certbot/www:/var/www/certbot:rw
+    #command: certonly --webroot --webroot-path=/var/www/certbot/ --email georgievsky96@gmail.com --agree-tos --no-eff-email -d broteamracing.ru -d www.broteamracing.ru
+    depends_on:
+      - nginx
 
   redis:
     image: redis:latest
@@ -82,6 +100,7 @@ services:
 
   celery:
     container_name: celery
+    restart: always
     build:
       context: ./
     command: celery -A btr worker -l info
@@ -123,6 +142,7 @@ services:
 volumes:
   pg_data:
   static_volume:
+  media_volume:
 
 networks:
   btr-network:
